# glossary

./: .cursorignore  .env.example  .gitattributes  .gitignore  1  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  Makefile  README.md  REFACTORING_PLAN.md  TEST_RESULTS.md  TODOS.md  UTILS_CLEANUP_PLAN.md  UV_SETUP.md  ambiguity_in_scientific_language.md  cleanup_remaining_config_refs.py  create_backups.py  debug.py  deduplication_learnings.md  explorer.js.backup  file_test.py  fix_empty_sources.py  fix_verification_errors.py  implementation_journal.md  lv1_final.txt  lv2_final.txt  lv3_s0_get_conference_topics_log.txt  migrate_to_centralized_config.py  optimization_summary.md  postprocessed_duplication_analysis.md  print_test.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  restore_from_backup.py  run_lv0_s1_optimization.py  run_lv0_s3_optimization.py  simple_test.py  (+2 more)
backups/empty_sources_fix_20250709_115409/: backup_manifest.json  hierarchy.json  metadata_collector.py
data/: hierarchy.json  institutions_departments.txt  level_files_update_report_via_fix_script.md  manual_evaluations.json  split_summary.json
data/concepts_info/: all_lv1_concepts.jsonl  all_lv2_concepts.jsonl
data/evaluation/: connectivity.json  issues.json  metrics.json  summary.json
data/final/: generated_definitions_output_report.json  hierarchy.json
data/lv0/: lv0_anzsrc.txt  lv0_filtered_resources.json  lv0_final.txt  lv0_metadata.json  lv0_resources.json  lv0_resources.txt  lv0_resources_summary.json  lv0_s0_college_names.txt  lv0_s0_metadata.json
data/lv1/: lv1_filtered_resources.json  lv1_final_test.txt  lv1_metadata.json  lv1_resources.txt  lv1_resources_summary.json
data/lv2/: lv2_filtered_resources.json  lv2_final.txt  lv2_metadata.json  lv2_resources.txt  lv2_resources_summary.json
data/lv3/: lv3_resources.txt  lv3_resources_summary.json
data/optimization_reports/: sample_optimization_demo_20250908_193439.txt  sample_optimization_demo_20250908_193439_detailed.json
data/prompts/: lv0_s1_program.json  lv0_s1_system_17598ae3.json  lv0_s1_system_latest.json  lv0_s1_user_latest.json  lv0_s3_system_latest.json  lv0_s3_user_latest.json
data/prompts_training_data/: lv0_s1.json  lv0_s1_backup.json  lv0_s3.json
data/reports/: hierarchy_quality_report.html
docs/: Comprehensive Literature Survey.md  README.md  bibliography.md  executive-summary-updated.md  executive-summary.md  failure_tracking_implementation.md  literature-review-and-problem-statement.md  mining_api_reference.md  project-framework.md  quick-reference.md  research-positioning.md  research-roadmap.md  v2_2_0_migration_guide.md  validation-migration-guide.md
docs/filtering_strategy/: lv1_filtering_strategy.md  monitoring_framework.md
generate_definition/: capitalize_definitions.py  generate_definitions.py  generate_definitions_for_split_terms.py
generate_embeddings/: batch_map_terms.py  enrich_metadata_with_related_concepts.py  generate_term_embeddings.py  inspect_embeddings.py  load_specific_terms.py  map_input_to_term.py  process_resources.py  query_embeddings.py
generate_glossary/: GUIDE.md  README_HIERARCHY.md  README_HIERARCHY_EVALUATION.md  README_METADATA.md  README_PIPELINE.md  __init__.py  analyze_duplicates.py  config.py  config_validator.py  hierarchy_builder.py  hierarchy_evaluator_viz.py  hierarchy_visualizer.py  md_converter.py  metadata_collector.py  metadata_collector_cli.py  rapidapi_openweb_ninja.py  requirements.txt  run_interactive.py  run_pipeline.py  web_miner_cli.py
hierarchy/: README.md  hierarchy_builder.py  hierarchy_evaluator.py  hierarchy_visualizer.py
prompt_optimization/: API_REFERENCE.md  OPTIMIZATION_RESULTS.md  README.md  README_SIMPLIFIED.md  TROUBLESHOOTING.md  __init__.py  cli.py  core.py  reporter.py  save.py  simple_save.py
prompts/: DESIGN.md  README.md  __init__.py  registry.py  storage.py
scripts/: analyze_academic_terminology.py  analyze_concept_completeness.py  build_test_dataset.py  count_wikipedia_terms.py  find_empty_concepts.py  training_data_validation_report.txt  update_target_resources.py  validate_training_data.py
sense_disambiguation/: README.md  __init__.py  apply_splits.py  cli.py  detector.py  fix_parent_child_relationships.py  requirements.txt  setup_data_dirs.sh  splitter.py  update_level_files.py  validate_split_terms.py  vector_store.py  verify_dataset.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_cli_entry_points.py  test_mining_module_comprehensive.py
tools/: llm_api.py  plan_exec_llm.py  token_tracker.py
(+3008 files in other folders)
